--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>POTM - Starts Here</title>
     <link rel="icon" type="img/x-icon" href="./images/favicon.ico">
-    <link rel="stylesheet" href="./stylesheets/index.scss">
     <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display|Open+Sans+Condensed:300|Questrial|Oswald|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-LRlmVvLKVApDVGuspQFnRQJjkv0P7/YFrw84YYQtmYG4nK8c+M+NlmYDCv0rKWpG" crossorigin="anonymous">
+    <link rel="stylesheet" href="./stylesheets/index.scss">
   </head>
   <body>
     <div class="potm-container">
@@ -35,7 +35,7 @@
           </div>
           <a href="https://www.meetup.com/MissoulaTech/events/258047128/" target="_blank" class="potm-header-rsvp button">RSVP</a>
           <a href="#potm-footer">
-            <div class="stroke-187">
+            <div class="potm-down-arrow">
             </div>
           </a>  
         </section>
@@ -44,29 +44,28 @@
         <section class="potm-section-content-articles">
         </section>
         <section class="potm-section-content-slider">
-            <div class='carousel carousel-animated carousel-animate-slide' data-autoplay="true">
-                <div class='carousel-container'>
-                  <div class='carousel-item'> 
-                    <p class=potm-scs-text1>What is it?</p>
-                    <br>
-                    <p class=potm-scs-text2>We all have passions and ideas. Sometimes we benefit</p>
-                    <p class=potm-scs-text2>by keeping them to ourselves, and sometimes they are brought to life</p> 
-                    <p class=potm-scs-text2>by sharing them with others. This is a time for sharing.</p> 
-                    <p class=potm-scs-text2>Sharing ideas, food and having a beer or two.</p>
-                    <p class=potm-scs-text2>All while supporting those of us who have gained the confidence </p>
-                    <p class=potm-scs-text2>to share their passions and ideas.</p>
-                  </div>
-                  <div class='carousel-item'> 
-                    <p class=potm-scs-text1>Feburary 22nd</p>
-                    <p class=potm-scs-text3>The Pivot:</p>
-                    <p class=potm-scs-text2>There are a lot of ways to pivot, and even more reasons. Why did you?</p>
-                </div>
+          <div class="carousel carousel-animated carousel-animate-slide" data-autoplay="true">
+            <div class="carousel-container">
+              <div class="carousel-item"> 
+                <p class="potm-scs-text1">What is it?</p>
+                <br>
+                <p class="potm-scs-text2">We all have passions and ideas. Sometimes we benefit</p>
+                <p class="potm-scs-text2">by keeping them to ourselves, and sometimes they are brought to life</p> 
+                <p class="potm-scs-text2">by sharing them with others. This is a time for sharing.</p> 
+                <p class="potm-scs-text2">Sharing ideas, food and having a beer or two.</p>
+                <p class="potm-scs-text2">All while supporting those of us who have gained the confidence </p>
+                <p class="potm-scs-text2">to share their passions and ideas.</p>
+              </div>
+              <div class="carousel-item"> 
+                <p class="potm-scs-text1">Feburary 22nd</p>
+                <p class="potm-scs-text3">The Pivot:</p>
+                <p class="potm-scs-text2">There are a lot of ways to pivot, and even more reasons. Why did you?</p>
             </div>
+          </div>
         </section>
         <section id="potm-content-events" class="hero potm-section-content-events">
           <div class="hero-body">
             <div class="container">
-
             </div>
           </div>
         </section>
@@ -74,20 +73,20 @@
           <span class="potm-scs-text4">Most Recent Speakers</span>
           <div class="potm-scs-container">
             <div class="potm-scs-img-container">
-                <img class="potm-scs-images" src="./images/Kels.jpg"/>
-                <span class="potm-scs-image-names">Kelsey <br> Iverson</span>
+              <img class="potm-scs-images" src="./images/Kels.jpg"/>
+              <span class="potm-scs-image-names">Kelsey <br> Iverson</span>
             </div>
             <div class="potm-scs-img-container">
-                <img class="potm-scs-images" src="./images/Ed.jpg"/>
-                <span class="potm-scs-image-names">Edward <br> Weymouth</span>
+              <img class="potm-scs-images" src="./images/Ed.jpg"/>
+              <span class="potm-scs-image-names">Edward <br> Weymouth</span>
             </div>
             <div class="potm-scs-img-container">
-                <img class="potm-scs-images" src="./images/Nora.jpg"/>
-                <span class="potm-scs-image-names">Nora <br> McDougall-Collins</span>
+              <img class="potm-scs-images" src="./images/Nora.jpg"/>
+              <span class="potm-scs-image-names">Nora <br> McDougall-Collins</span>
             </div>
             <div class="potm-scs-img-container">
-                <img class="potm-scs-images" src="./images/Kirk.jpg"/>
-                <span class="potm-scs-image-names">Kirk <br> Richardson</span>
+              <img class="potm-scs-images" src="./images/Kirk.jpg"/>
+              <span class="potm-scs-image-names">Kirk <br> Richardson</span>
             </div>
           </div>
         </section>              
@@ -106,12 +105,12 @@
         </a>
       </div>
       <div class="potm-footer-elem__rsvp">
-          <a class="potm-footer-elem__rsvp__anchor" href="https://www.meetup.com/MissoulaTech/events/258047128/">
-            <h3>RSVP</h3>
-          </a>
-          <p class="potm-footer-elem__rsvp__text" >
-            Potluck of the Minds is awesome
-          </p>
+        <a class="potm-footer-elem__rsvp__anchor" href="https://www.meetup.com/MissoulaTech/events/258047128/">
+          <h3>RSVP</h3>
+        </a>
+        <p class="potm-footer-elem__rsvp__text" >
+          Potluck of the Minds is awesome
+        </p>
       </div>
     </footer>
     <script src="index.js"></script>
