added accessibility tags to so that tabbing around doesn't skip over anything and reads the page for the most part from top to bottom. also adjusted footer in contact to have working rsvp link

--- a/src/about.html
+++ b/src/about.html
@@ -21,7 +21,7 @@
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
-        <section class="potm-section-content-header potm-mission-header">
+        <section class="potm-section-content-header potm-mission-header" tabindex="1">
           <h3>Why Potluck of the Minds?</h3>
           <br/>
           <p>The goal of Potluck of the Minds is to bring together those in our community with an urge to teach, learn, and share.</p>
